# PCS2026

./: miofilegit.txt
esercitazione1/: CMakeLists.txt  medie_temperatura.cpp
esercitazione10/: CMakeLists.txt  grad_con.hpp  main_gradiente.cpp  test_grad_con.cpp
esercitazione2/: CMakeLists.txt  min_max_bubblesort.cpp  pos_memoria.cpp
esercitazione3/: CMakeLists.txt  rational.hpp  rational_es3.cpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sort_function.hpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  es_5_considerazioni.txt  measure_sorts.cpp  sort_function.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_my_quicksort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  grafi.hpp  main_grafi.cpp  test_grafi.cpp
esercitazione9/: CMakeLists.txt  grafi_cammini.cpp  grafi_fifo_lifo.hpp  graph_visit.hpp
